@@ -14,8 +14,6 @@ Flash Player ( http://get.adobe.com/flashplayer/ )
 java -jar its-electric-1.6.jar -g http://192.168.1.99 -m 2 -d its-electric-db
 BUT CHANGE "192.168.1.99" to the IP address of your TED Gateway, and
 change "2" (in "-m 2") to the number of MTUs in your TED system.
-(If you want to monitor voltage, add "-v yes".  If you want to monitor kVA, add "-k 2"
-where 2 is the number of seconds "it's electric" waits between polls for kVA data.)
 
 (Note: if your TED Gateway is automatically assigned an IP address, you can
 try using -g http://TED5000 which is known to work on Windows.)
@@ -30,6 +28,12 @@ click on "Add Location" in the "Edit Locations" dropdown, and
 
 5) Open its-electric/web/its-electric.html in your browser (for instance, 
 by double-clicking it). 
+
+6) (optional) If you want to monitor voltage, add "-v yes" to the command in 
+step (3).  If you want to monitor kVA, add "-k 2" where 2 is the number of 
+seconds "it's electric" waits between polls for kVA data.  You'll also need 
+to edit "its-electric-config.js" and change "hasVoltage" and/or "hasKVA" to 
+"true".
 
 
 Installation advice from users
@@ -66,7 +70,9 @@ and port) where the its-electric server will contact TED; -p specifies the
 port where the its-electric web pages will contact the its-electric server.
 
 If you include "-v yes", then its-electric will monitor the voltage data
-from TED as well as power.
+from TED as well as power.  If you include "-k 2", its-electric will poll for 
+kVA data every 2 seconds (unlike voltage and real power, kVA data is not
+included in the TED history data).
 
 You can read about other options by using option "--help".
 
@@ -82,11 +88,13 @@ I particularly recommend java -server for this.
 
 (2) Next you'll need to set up the "it's electric" web files, in the 
 extracted its-electric/web directory.  You may need to edit the 
-html files to tell them how to contact the datasource server you set up in 
-part (1); they come looking for "http://localhost:8081" which may work fine 
-for you, but will certainly need to be changed if you want your data accessible
-over the Internet---it's a client-side process to get the data and
-pass it to the chart.  Look for "CHANGE URL HERE" in the html files.
+file its-electric-config.js file to tell how to contact the datasource 
+server you set up in part (1); it comes looking for "http://localhost:8081" 
+which may work fine for you, but will certainly need to be changed if you 
+want your data accessible over the Internet---it's a client-side process 
+to get the data and pass it to the chart.  Change the property
+"gatewayURL".  If you're storing voltage and/or kVA data, change "hasVoltage"
+and/or "hasKVA" to "true".
 
 Even if you're just looking at the data yourself, you may want to 
 access the files through a webserver.  (On a Mac, this just means 
@@ -98,17 +106,17 @@ you can point your browser at http://localhost/its-electric.html.)
 If you try to access its-electric.html using a file: URL, it's 
 probably not going to work.  This has to do with Flash security 
 settings.  You can fix this by going to the Flash Player Settings 
-Manager and adding the relevant file to the trusted locations.  
+Manager and adding the relevant files to the trusted locations.  
 Go to
 
 http://www.macromedia.com/support/documentation/en/flashplayer/help/settings_manager04.html  
 
 click on "Add Location" in the "Edit Locations" dropdown, and browse to
-its-electric.html.
+the folder "its-electric/web".
 
 (If you really want to use a file: URL without doing that, you can try
-setting itsElectric.noFlashEvents=true in the javascript near the top
-of its-electric.html, and it should limp along.  Not recommended.)
+setting "noFlashEvents: true" in its-electric-config.js, and it should limp 
+along.  Not recommended.)
 
 If you do share your "it's electric" over the Web, make sure you 
 include a link to the source download.  You can either make 
